Actualizar package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Nicolas-Daniel-Rodriguez/showLive.git"
   },
-  "author": "Nicolas D. Rodriguez",
+  "author": "Nicolas D. Rodriguez y Mauro Morales",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nicolas-Daniel-Rodriguez/showLive/issues"
